--- a/amazon.html
+++ b/amazon.html
@@ -53,7 +53,7 @@
     
     <div class="main">
       <div class="products-grid">
-        <div class="product-container">
+        <div class="product-container ">
           <div class="product-image-container">
             <img class="product-image"
               src="images/products/athletic-cotton-socks-6-pairs.jpg">
@@ -201,5 +201,6 @@
         </div>
       </div>
     </div>
+    <script src="scripts/amazon.js"></script>
   </body>
 </html>
